--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ __pycache__
 *.txt
 SECTION2_DomainRecommender/results/svd_predictions.npy
 .env
+!Report/PCA_meanfill_terminal.txt
+!Report/PCA_MLE_terminal.txt
