--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,18 @@ __pycache__
 .env
 *.npy
 *.json
+SECTION1_DimensionalityReduction/data/preprocessed_data.csv
+venv/
+*.csv
+pycache
+*.pkl
+*.zip
+*.png
+*.txt
+SECTION2_DomainRecommender/results/svd_predictions.npy
+.env
+!Report/PCA_meanfill_terminal.txt
+!Report/PCA_MLE_terminal.txt
+!Report/SVD_terminal_output.txt
+!Report/SVD_conclusion.md
+!Report/SVD_analysis.md
